--- a/html5学习/WebApplication1/Views/HX01/HX010100.cshtml
+++ b/html5学习/WebApplication1/Views/HX01/HX010100.cshtml
@@ -29,17 +29,17 @@
                 </div>           
         </div>
     </div>   
-        <div id="toolbar" class="btn-group">
-            <button id="btn_add" type="button" class="btn btn-default" onclick="addVideoShow();">
-                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新增
-            </button>   
-            <button id="btn_excel" type="button" class="btn btn-default" onclick="excel();">
-                <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>导出
-            </button>       
-        </div>     
-      <div id="heighttable" region="center" style="width: 100%; overflow: hidden;" border="false">
-            <table id="test-table" class="table table-hover table-bordered" data-toolbar="#toolbar" fit="true"></table>
-        </div>
+    <div id="toolbar" class="btn-group">
+        <button id="btn_add" type="button" class="btn btn-default" onclick="addVideoShow();">
+            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新增
+        </button>   
+        <button id="btn_excel" type="button" class="btn btn-default" onclick="excel();">
+            <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>导出
+        </button>       
+    </div>     
+      @*<div id="heighttable" region="center" style="width: 100%; overflow: hidden;" border="false">*@
+            <table id="test-table" class="table table-striped table-bordered" data-toolbar="#toolbar" fit="true"></table>
+        @*</div>*@
 </section>
 
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" style="width:900px; height:380px; background-color:white">
