--- a/html5学习/WebApplication1/Views/HX01/HX010100.cshtml
+++ b/html5学习/WebApplication1/Views/HX01/HX010100.cshtml
@@ -14,31 +14,48 @@
 }
 
 <section class="content">
-    <div class="ibox float-e-margins">
-        <div class="ibox-content">           
-                <div class="form-group">
-                    姓名: <input id="userName" name="userName" type="text" class="input" placeholder="搜索关键字" />
-                    开始时间：<input class="Wdate datagrid-editable-input" onclick="WdatePicker({dateFmt:'yyyy-MM-dd',readOnly:true});" name="startTime" id="startTime"
-                                placeholder="搜索关键字" style="height:25px">
-                    号码: <input id="mobile" name="mobile" type="text" class="input" placeholder="搜索关键字" />
-                    结束时间：<input class="Wdate datagrid-editable-input" onclick="WdatePicker({dateFmt:'yyyy-MM-dd',readOnly:true});" name="endTime" id="endTime"
-                                placeholder="搜索关键字" style="height:25px">
-                    <span>
-                        <button id="btnSearch" class="btn btn btn-primary" type="button" onclick="query()"> <i class="fa fa-search"></i> 查询</button>
-                    </span>
-                </div>           
+    <div class="panel-body" style="padding-bottom:0px;">
+        <div class="panel panel-default">       
+            <div class="panel-body">
+                <form id="formSearch" class="form-horizontal">
+                    <div class="form-group" style="margin-top:15px">
+                        <label class="control-label col-sm-1" for="userName">姓名</label>
+                        <div class="col-sm-2">
+                            <input type="text" class="form-control" id="userName">
+                        </div>
+                        <label class="control-label col-sm-1" for="mobile">号码</label>
+                        <div class="col-sm-2">
+                            <input type="text" class="form-control" id="mobile">
+                        </div>
+                        <label class="control-label col-sm-1" for="startTime">开始时间</label>
+                        <div class="col-sm-2">
+                            <input class="Wdate datagrid-editable-input" onclick="WdatePicker({dateFmt:'yyyy-MM-dd',readOnly:true});" name="startTime" id="startTime"
+                                   placeholder="搜索关键字" style="height:32px; width:224px">
+                        </div>
+                        <label class="control-label col-sm-1" for="endTime">结束时间</label>
+                        <div class="col-sm-2">
+                            <input class="Wdate datagrid-editable-input" onclick="WdatePicker({dateFmt:'yyyy-MM-dd',readOnly:true});" name="endTime" id="endTime"
+                                   placeholder="搜索关键字" style="height:32px; width:224px">
+                        </div>
+                        <div class="col-sm-2" style="text-align:left;">
+                            <button type="button" id="btn_query" style="margin-left:50px" class="btn btn-primary" onclick="query();">查询</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
-    </div>   
-    <div id="toolbar" class="btn-group">
-        <button id="btn_add" type="button" class="btn btn-default" onclick="addVideoShow();">
-            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新增
-        </button>   
-        <button id="btn_excel" type="button" class="btn btn-default" onclick="excel();">
-            <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>导出
-        </button>       
-    </div>     
-      @*<div id="heighttable" region="center" style="width: 100%; overflow: hidden;" border="false">*@
-            <table id="test-table" class="table table-striped table-bordered" data-toolbar="#toolbar" fit="true"></table>
+        </div>
+
+        <div id="toolbar" class="btn-group">
+            <button id="btn_add" type="button" class="btn btn-default" onclick="addVideoShow();">
+                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新增
+            </button>
+            <button id="btn_excel" type="button" class="btn btn-default" onclick="excel();">
+                <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>导出
+            </button>
+        </div>
+        @*<div id="heighttable" region="center" style="width: 100%; overflow: hidden;" border="false">*@
+        <table id="test-table" class="table table-striped table-bordered" data-toolbar="#toolbar" fit="true"></table>
         @*</div>*@
 </section>
 
